--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -30,5 +30,14 @@ $border: 1px solid #ddd;
 }
 
 @mixin border-radius-2 {
-  border-radius: 2px
+  border-radius: 2px;
+}
+
+@mixin border-radius-full {
+  border-radius: 100%;
+}
+
+@mixin item-middle {
+  display: inline-block;
+  vertical-align: middle;
 }
