--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -177,8 +177,12 @@
   font-family: "Microsoft YaHei";
 }
 
+.font-0 {
+  font-size: 0;
+}
+
 .font-12 {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .font-14 {
